--- a/index.html
+++ b/index.html
@@ -1,145 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cards</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="./desktop.css"
+      media="screen and (min-width: 415px)"
+    />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cards</title>
-	<link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <div class="container-custom">
 
-<body>
-	<div class="container">
-		<div class="card">
+		<div class="card-custom">
 			<div class="left-column background1-left-column">
-                <div class="image-container">
-                    <img src="./images/ian-dooley-d1UPkiFd04A-unsplash.jpg" alt="">
-                </div>
+			<div class="image-container-custom">
+				<img src="./images/ian-dooley-d1UPkiFd04A-unsplash.jpg" alt="" />
+			</div>
 			</div>
 			<div class="right-column background1-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background1-left-column">Contactar</button>
+			<h2>Nombre</h2>
+			<div>
+				<h6>Profesion</h6>
 			</div>
-
-		</div>
-
-		<div class="card">
-			<div class="left-column background2-left-column">
-				<div class="image-container">
-                    <img src="./images/courtney-cook-TSZo17r3m0s-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background2-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background2-left-column">Contactar</button>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+				sintLorem ipsum dolor sit amet. Vel magni
+			</p>
+			<button class="button background1-left-column">Contactar</button>
 			</div>
 		</div>
 
-		<div class="card">
-			<div class="left-column background3-left-column">
-				<div class="image-container">
-                    <img src="./images/aleksandr-minakov-xDyqR14KyAs-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background3-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background3-left-column">Contactar</button>
-			</div>
-		</div>
+      <div class="card-custom">
+        <div class="left-column background2-left-column">
+          <div class="image-container-custom">
+            <img src="./images/courtney-cook-TSZo17r3m0s-unsplash.jpg" alt="" />
+          </div>
+        </div>
+        <div class="right-column background2-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background2-left-column">Contactar</button>
+        </div>
+      </div>
 
-		<div class="card">
-			<div class="left-column background4-left-column">
-				<div class="image-container">
-                    <img src="./images/mateus-campos-felipe-JoM_lC1WAnE-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background4-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background4-left-column">Contactar</button>
-			</div>
-		</div>
+      <div class="card-custom">
+        <div class="left-column background3-left-column">
+          <div class="image-container-custom">
+            <img
+              src="./images/aleksandr-minakov-xDyqR14KyAs-unsplash.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="right-column background3-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background3-left-column">Contactar</button>
+        </div>
+      </div>
 
-		<div class="card">
-			<div class="left-column background3-left-column">
-                <div class="image-container">
-                    <img src="./images/gabriel-silverio-u3WmDyKGsrY-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background3-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background3-left-column">Contactar</button>
-			</div>
+      <div class="card-custom">
+        <div class="left-column background4-left-column">
+          <div class="image-container-custom">
+            <img
+              src="./images/mateus-campos-felipe-JoM_lC1WAnE-unsplash.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="right-column background4-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background4-left-column">Contactar</button>
+        </div>
+      </div>
 
-		</div>
+      <div class="card-custom">
+        <div class="left-column background3-left-column">
+          <div class="image-container-custom">
+            <img
+              src="./images/gabriel-silverio-u3WmDyKGsrY-unsplash.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="right-column background3-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background3-left-column">Contactar</button>
+        </div>
+      </div>
 
-		<div class="card">
-			<div class="left-column background4-left-column">
-				<div class="image-container">
-                    <img src="./images/yunming-wang-G9f4Enb8XVM-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background4-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background4-left-column">Contactar</button>
-			</div>
-		</div>
+      <div class="card-custom">
+        <div class="left-column background4-left-column">
+          <div class="image-container-custom">
+            <img src="./images/yunming-wang-G9f4Enb8XVM-unsplash.jpg" alt="" />
+          </div>
+        </div>
+        <div class="right-column background4-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background4-left-column">Contactar</button>
+        </div>
+      </div>
 
-		<div class="card">
-			<div class="left-column background1-left-column">
-				<div class="image-container">
-                    <img src="./images/kenny-timmer-V-bW-TDTo2c-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background1-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background1-left-column">Contactar</button>
-			</div>
-		</div>
+      <div class="card-custom">
+        <div class="left-column background1-left-column">
+          <div class="image-container-custom">
+            <img src="./images/kenny-timmer-V-bW-TDTo2c-unsplash.jpg" alt="" />
+          </div>
+        </div>
+        <div class="right-column background1-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background1-left-column">Contactar</button>
+        </div>
+      </div>
 
-		<div class="card">
-			<div class="left-column background2-left-column">
-				<div class="image-container">
-                    <img src="./images/vinicius-amnx-amano-0NCjjD0zGnw-unsplash.jpg" alt="">
-                </div>
-			</div>
-			<div class="right-column background2-right-column">
-				<h2>Nombre</h2>
-                <div>
-					<h6>Profesion</h6>
-				</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, sintLorem ipsum dolor sit amet. Vel magni</p>
-				<button class="button background2-left-column">Contactar</button>
-			</div>
-		</div>
-	</div>
-</body>
+      <div class="card-custom">
+        <div class="left-column background2-left-column">
+          <div class="image-container-custom">
+            <img
+              src="./images/vinicius-amnx-amano-0NCjjD0zGnw-unsplash.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="right-column background2-right-column">
+          <h2>Nombre</h2>
+          <div>
+            <h6>Profesion</h6>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
+            sintLorem ipsum dolor sit amet. Vel magni
+          </p>
+          <button class="button background2-left-column">Contactar</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Scripts -->
+    <script type="text/javascript" src="./main.js"></script>
+  </body>
 </html>
